// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> Popup should render the closed Popup UI without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="styles__Container-sc-hsnn8o-0 itzZCe"
      >
        <div
          class="styles__Lightbox-sc-hsnn8o-1 iCWwzy"
          data-testid="popupLightbox"
        />
        <div
          class="styles__Dialog-sc-hsnn8o-2 kkIep"
        >
          <div
            class="styles__Close-sc-hsnn8o-5 jEoFoT"
            data-testid="popupClose"
          >
            X
          </div>
          <img
            alt="Popup Test"
            class="styles__Landscape-sc-hsnn8o-3 dDwluL"
            data-orientation="landscape"
            data-testid="popupImage"
            src="/about"
          />
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="styles__Container-sc-hsnn8o-0 itzZCe"
    >
      <div
        class="styles__Lightbox-sc-hsnn8o-1 iCWwzy"
        data-testid="popupLightbox"
      />
      <div
        class="styles__Dialog-sc-hsnn8o-2 kkIep"
      >
        <div
          class="styles__Close-sc-hsnn8o-5 jEoFoT"
          data-testid="popupClose"
        >
          X
        </div>
        <img
          alt="Popup Test"
          class="styles__Landscape-sc-hsnn8o-3 dDwluL"
          data-orientation="landscape"
          data-testid="popupImage"
          src="/about"
        />
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Component -> Popup should render the open Popup UI without throwing an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="styles__Container-sc-hsnn8o-0 jkHdDZ"
      >
        <div
          class="styles__Lightbox-sc-hsnn8o-1 iCWwzy"
          data-testid="popupLightbox"
        />
        <div
          class="styles__Dialog-sc-hsnn8o-2 kkIep"
        >
          <div
            class="styles__Close-sc-hsnn8o-5 jEoFoT"
            data-testid="popupClose"
          >
            X
          </div>
          <img
            alt="Popup Test"
            class="styles__Landscape-sc-hsnn8o-3 dDwluL"
            data-orientation="landscape"
            data-testid="popupImage"
            src="/about"
          />
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="styles__Container-sc-hsnn8o-0 jkHdDZ"
    >
      <div
        class="styles__Lightbox-sc-hsnn8o-1 iCWwzy"
        data-testid="popupLightbox"
      />
      <div
        class="styles__Dialog-sc-hsnn8o-2 kkIep"
      >
        <div
          class="styles__Close-sc-hsnn8o-5 jEoFoT"
          data-testid="popupClose"
        >
          X
        </div>
        <img
          alt="Popup Test"
          class="styles__Landscape-sc-hsnn8o-3 dDwluL"
          data-orientation="landscape"
          data-testid="popupImage"
          src="/about"
        />
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
